Completed Upstream practice

--- a/prathamesh-rebase-practice.html
+++ b/prathamesh-rebase-practice.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello World!</h1>
     <h3>Now I am understanding Upstream</h3>
+    <h4>Excellent! I have now understood concept of Upstream.</h4>
 </body>
 </html>
